--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -1,50 +1,26 @@
-@mixin mq($type) {
-    $mobile: 320px;
-    $tablet: 768px;
-    $desktop: 1280px;
-
-    @if $type =='mobile-only' {
-        @media screen and (max-width: #{$tablet - 0.02}) {
-            @content;
-        }
+@mixin mobile {
+    @media screen and (min-width: 320px) {
+        @content;
     }
+}
 
-    @if $type =='mobile' {
-        @media screen and (min-width: $mobile) {
-            @content;
-        }
+@mixin tablet {
+    @media screen and (min-width: 768px) {
+        @content;
     }
+}
 
-    @if $type =='tablet-only' {
-        @media screen and (min-width: $tablet) and (max-width: #{$desktop - 0.02}) {
-            @content;
-        }
+@mixin desktop {
+    @media screen and (min-width: 1280px) {
+        @content;
     }
+}
 
-    @if $type =='tablet' {
-        @media screen and (min-width: $tablet) {
-            @content;
-        }
-    }
+@mixin retina {
 
-    @if $type =='not-desktop' {
-        @media screen and (max-width: #{$desktop - 0.02}) {
-            @content;
-        }
-    }
-
-    @if $type =='desktop' {
-        @media screen and (min-width: $desktop) {
-            @content;
-        }
-    }
-
-    @if $type =='retina' {
-
-        @media (min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
-            @content;
-        }
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        @content;
     }
 }
