--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,13 +1,13 @@
 /* Base styles*/
-@import './base/container';
-@import './base/reset-styles';
+// @import './base/container';
+// @import './base/reset-styles';
 
 /* Components */
 
 /* Layouts*/
 
 /* Utils */
-@import './utils/mixins';
+// @import './utils/mixins';;
 @import './utils/normalize';
 @import './utils/vars';
 @import './utils/visually-hidden';
