--- a/src/sass/layouts-homepage/_gallery.scss
+++ b/src/sass/layouts-homepage/_gallery.scss
@@ -1,3 +1,12 @@
+.gallery-section {
+  padding-top: 20px;
+  padding-bottom: 40px;
+  @include tablet {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
 .gallery-list {
   display: flex;
   flex-wrap: wrap;
@@ -13,21 +22,41 @@
 }
 
 .film-card {
+  object-fit: cover;
+  border-radius: 2%;
   transition: transform 250ms;
+  &:hover .film-card__img,
+  &:focus .film-card__img {
+    box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.45);
+  }
+  &:hover,
+  &:focus {
+    transform: scale(1.05);
+  }
+  display: block;
+  width: 280px;
+  @include tablet {
+    width: 336px;
+  }
+  @include desktop {
+    width: 393px;
+  }
 }
 
 .film-card__img {
+  min-width: 100%;
   display: inline-block;
-  max-width: 280px;
+  // max-width: 280px;
   height: 402px;
   border-radius: 5px;
+  cursor: pointer;
 
   @include tablet {
-    max-width: 336px;
+    // max-width: 336px;
     height: 455px;
   }
   @include desktop {
-    max-width: 394px;
+    // max-width: 394px;
     height: 574px;
   }
 }
