--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,6 +7,7 @@
 @import './components/spinner';
 
 /* Layouts*/
+@import './components/header-main';
 @import './components/gallery';
 @import './components/footer';
 
