--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -12,8 +12,12 @@
 .gallery-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
+  column-gap: 16px;
+  row-gap: 32px;
   margin-bottom: 20px;
+}
+.gallery-item {
+  width: calc((100% - 32px) / 3);
 }
 
 .photo-card {
@@ -23,13 +27,40 @@
 
 .item-backdrop {
   display: block;
-  width: 394px;
+  width: 390px;
   height: 574px;
   object-fit: cover;
   border-radius: 2%;
 }
 
 .sub-card {
+  margin-top: 2px;
   display: flex;
   gap: 10px;
+}
+
+.card-title {
+  margin-top: 12px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: start;
+  text-transform: uppercase;
+}
+.card-genres,
+.date {
+  color: rgba(255, 107, 8, 1);
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+}
+
+.card-genres::after {
+  color: rgba(255, 107, 8, 1);
+  content: '|';
+  margin-left: 10px;
 }
