--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,6 +5,8 @@
 
 /* Components */
 @import './components/spinner';
+@import './components/buttons';
+@import './components/header-library';
 
 /* Layouts*/
 
