--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,6 +6,7 @@
 
 /* Components */
 @import './components/spinner';
+@import './components/scroll-up-btn';
 
 /* Layouts*/
 @import './components/header-main';
