видалено зразки карток філмів

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,110 +1,5 @@
 <section class="gallery-section">
   <div class="container gallery-container gallery">
-    <ul class="gallery-list">
-      <li class="film-card">
-        <a href="" class="film-card_link">
-          <picture class="film-card__img">
-            <source
-              srcset="./images/no-foto.jpg"
-              loading="lazy"
-              media="(min-width: 1280px)"
-            />
-            <source
-              srcset="./images/no-foto.jpg"
-              loading="lazy"
-              media="(min-width: 768px)"
-            />
-            <source
-              srcset="./images/no-foto.jpg"
-              loading="lazy"
-              media="(min-width: 320px)"
-            />
-            <img
-              class="film-card__img film-img"
-              src="./images/no-foto.jpg"
-              alt="Poster for the film"
-              width="395"
-            />
-          </picture>
-          <h3 class="film-card__title">Title film</h3>
-          <div class="film-card_info-container">
-            <ul class="film-card__caption">
-              <li class="film-card__genre">Genre film</li>
-              <li class="film-card__date">Date film</li>
-            </ul>
-          </div>
-        </a>
-      </li>
-      <li class="film-card">
-        <a href="" class="film-card_link">
-          <picture class="film-card__img">
-            <source
-              srcset="./images/no-foto.jpg"
-              loading="lazy"
-              media="(min-width: 1280px)"
-            />
-            <source
-              srcset="./images/no-foto.jpg"
-              loading="lazy"
-              media="(min-width: 768px)"
-            />
-            <source
-              srcset="./images/no-foto.jpg"
-              loading="lazy"
-              media="(min-width: 320px)"
-            />
-            <img
-              class="film-card__img film-img"
-              src="./images/no-foto.jpg"
-              alt="Poster for the film"
-              width="395"
-            />
-          </picture>
-          <h3 class="film-card__title">Title film</h3>
-          <div class="film-card_info-container">
-            <ul class="film-card__caption">
-              <li class="film-card__genre">Genre film</li>
-              <li class="film-card__date">Date film</li>
-            </ul>
-          </div>
-        </a>
-      </li>
-      <li class="film-card">
-        <a href="" class="film-card_link">
-          <picture class="film-card__img">
-            <source
-              srcset="./images/no-foto.jpg"
-              loading="lazy"
-              media="(min-width: 1280px)"
-            />
-            <source
-              srcset="./images/no-foto.jpg"
-              loading="lazy"
-              media="(min-width: 768px)"
-            />
-            <source
-              srcset="./images/no-foto.jpg"
-              loading="lazy"
-              media="(min-width: 320px)"
-            />
-            <img
-              class="film-card__img film-img"
-              src="./images/no-foto.jpg"
-              alt="Poster for the film"
-              width="395"
-              height="574"
-            />
-          </picture>
-          <h3 class="film-card__title">Title film</h3>
-          <div class="film-card_info-container">
-            <ul class="film-card__caption">
-              <li class="film-card__genre">Genre film</li>
-              <li class="film-card__date">Date film</li>
-            </ul>
-          </div>
-        </a>
-      </li>
-    </ul>
+    <ul class="gallery-list"></ul>
   </div>
 </section>
-
