--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,12 +5,14 @@
       <li class="foter__list-item">Developed with</li>
       <li>
         <svg class="footer__list-icon">
-          <use href="#"></use>
+          <use href="./images/icons.svg#icon-heart-favorite"></use>
         </svg>
       </li>
       <li class="foter__list-item">
         by
-        <button type="button" class="footer__btn">GoIT Students</button>
+        <button type="button" class="footer__btn" id="open-modal-btn">
+          GoIT Students
+        </button>
       </li>
     </ul>
   </div>
