--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,6 +12,8 @@
 @import './layouts-homepage/gallery';
 @import './components/gallery';
 @import './components/footer';
+@import './components/team-modal';
+
 
 /* Utils */
 @import './utils/normalize';
