--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,6 +13,7 @@
 @import './layouts-homepage/gallery';
 @import './components/gallery';
 @import './components/footer';
+@import './components/team-modal';
 
 /* Utils */
 @import './utils/normalize';
