open&close modal team FIXED

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,7 +10,9 @@
       </li>
       <li class="foter__list-item">
         by
-        <button type="button" class="footer__btn">GoIT Students</button>
+        <button type="button" class="footer__btn" id="open-modal-btn">
+          GoIT Students
+        </button>
       </li>
     </ul>
   </div>
