--- a/src/partials/team-modal.html
+++ b/src/partials/team-modal.html
@@ -1,6 +1,6 @@
-<div class="footer__backdrop is-hidden" id="modal">
+<div class="footer__backdrop is-hidden" id="modal-team">
   <div class="footer__modal">
-    <span class="close" id="close">&times;</span>
+    <button class="close" id="close">X</button>
     <h2 class="team">Our Team</h2>
     <ul class="team__list">
       <!-- 1st -->
