--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,6 +10,7 @@
 
 /* Layouts*/
 @import './components/header-main';
+@import './components/header-library';
 @import './layouts-homepage/gallery';
 @import './components/gallery';
 @import './components/footer';
