--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,7 +5,7 @@
       <li class="foter__list-item">Developed with</li>
       <li>
         <svg class="footer__list-icon">
-          <use href="#"></use>
+          <use href="./images/icons.svg#icon-heart-favorite"></use>
         </svg>
       </li>
       <li class="foter__list-item">
