--- a/src/partials/team-modal.html
+++ b/src/partials/team-modal.html
@@ -126,7 +126,7 @@
                 aria-label="link to Linkedin"
               >
                 <svg class="sns-list__icon" width="40" height="40">
-                  <use href="./images/icons.svg#icon-linkedinn"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -558,7 +558,7 @@
                 aria-label="link to Linkedin"
               >
                 <svg class="sns-list__icon" width="40" height="40">
-                  <use href="./images/icons.svg#icon-linkedinn"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
