fixed footer, scroll-up btn

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -52,6 +52,21 @@ footer {
   height: 13px;
   margin-right: 5px;
   margin-top: 3px;
+  animation: logoPulse 2500ms linear 500ms infinite;
+}
+
+@keyframes logoPulse {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.25);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
 
 .footer__btn {
@@ -67,19 +82,18 @@ footer {
   text-decoration: underline 2px #545454bb;
 }
 
-.footer__btn:hover .footer__list-icon {
+.footer__btn:hover 
+.footer__list-icon {
   width: 200px;
   height: 200px;
 }
 
-// ====================================
+// .for__footer-wrapper {
+//   display: flex;
+//   flex-direction: column;
+//   height: 100vh;
+// }
 
-.for__footer-wrapper {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
-main {
-  flex: 1;
-}
+// main {
+//   flex: 1;
+// }
