--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,19 +1,13 @@
 <footer>
   <div class="foter__list">
-    <p class="foter__list-item">© 2022 | All Rights Reserved |</p>
-    <ul class="footer__wrap">
-      <li class="foter__list-item">Developed with</li>
-      <li>
-        <svg class="footer__list-icon">
-          <use href="./images/icons.svg#icon-heart-favorite"></use>
-        </svg>
-      </li>
-      <li class="foter__list-item">
-        by
-        <button type="button" class="footer__btn" id="open-modal-btn">
-          GoIT Students
-        </button>
-      </li>
-    </ul>
+    <p class="foter__list-item">
+      © 2023 | All Rights Reserved | Developed with
+    </p>
+    <svg class="footer__list-icon">
+      <use href="./images/icons.svg#icon-heart-favorite"></use>
+    </svg>
+    <button type="button" class="footer__btn" id="open-modal-btn">
+      by GoIT Students
+    </button>
   </div>
 </footer>
