--- a/src/partials/team-modal.html
+++ b/src/partials/team-modal.html
@@ -22,7 +22,7 @@
             </li>
             <li class="sns-list__item">
               <a
-                href="https://github.com/BohdanMus"
+                href="https://www.linkedin.com/in/bogdan-musienko-aa8b691a9/"
                 lang="en"
                 class="sns-list__link"
                 target="_blank"
@@ -70,7 +70,7 @@
             </li>
             <li class="sns-list__item">
               <a
-                href="https://github.com/Inhaasap"
+                href="https://www.linkedin.com/in/inha-yurchenko"
                 lang="en"
                 class="sns-list__link"
                 target="_blank"
@@ -118,7 +118,7 @@
             </li>
             <li class="sns-list__item">
               <a
-                href="https://github.com/iSteffan"
+                href="https://www.linkedin.com/in/stepan-skichko/"
                 lang="en"
                 class="sns-list__link"
                 target="_blank"
@@ -135,7 +135,7 @@
             <div class="team__foto-thumb">
               <img
                 class="team__student-foto"
-                src="./images/Team/InhaYurchenko.jpg"
+                src="./images/Team/BohdanMusiienko.jpg"
                 alt="StepanSkichko"
                 width="280px"
               />
@@ -166,7 +166,7 @@
             </li>
             <li class="sns-list__item">
               <a
-                href="https://github.com/DmitroLitvinenko"
+                href="https://www.linkedin.com/in/dmytro-litvinenko-6aa417240/"
                 lang="en"
                 class="sns-list__link"
                 target="_blank"
@@ -262,7 +262,7 @@
             </li>
             <li class="sns-list__item">
               <a
-                href="https://github.com/SerhiiRud"
+                href="https://www.linkedin.com/in/serhii-rud-011580270"
                 lang="en"
                 class="sns-list__link"
                 target="_blank"
@@ -310,7 +310,7 @@
             </li>
             <li class="sns-list__item">
               <a
-                href="https://github.com/NataliiaRud"
+                href="https://www.linkedin.com/in/nataliia-rud-88b8bb26b/"
                 lang="en"
                 class="sns-list__link"
                 target="_blank"
@@ -375,7 +375,7 @@
             <div class="team__foto-thumb">
               <img
                 class="team__student-foto"
-                src="./images/Team/BohdanMusiienko.jpg"
+                src="./images/Team/InhaYurchenko.jpg"
                 alt="MarynaDanyliuk"
                 width="280px"
               />
@@ -423,7 +423,7 @@
             <div class="team__foto-thumb">
               <img
                 class="team__student-foto"
-                src="./images/Team/BohdanMusiienko.jpg"
+                src="./images/Team/OleksandrSibirtsev.jpg"
                 alt="OleksandrSibirtsev"
                 width="280px"
               />
@@ -454,7 +454,7 @@
             </li>
             <li class="sns-list__item">
               <a
-                href="https://github.com/Bivis60"
+                href="https://www.linkedin.com/in/%D0%B0%D0%BD%D0%B0%D1%82%D0%BE%D0%BB%D1%96%D0%B9-%D0%BF%D0%B8%D1%81%D0%B0%D1%80%D0%B5%D0%BD%D0%BA%D0%BE-40022b239/"
                 lang="en"
                 class="sns-list__link"
                 target="_blank"
@@ -471,7 +471,7 @@
             <div class="team__foto-thumb">
               <img
                 class="team__student-foto"
-                src="./images/Team/BohdanMusiienko.jpg"
+                src="./images/Team/AnatoliiPysarenko.jpg"
                 alt="AnatoliiPysarenko"
                 width="280px"
               />
@@ -567,7 +567,7 @@
             <div class="team__foto-thumb">
               <img
                 class="team__student-foto"
-                src="./images/Team/BohdanMusiienko.jpg"
+                src="./images/Team/ElnaraMamedova.jpg"
                 alt="ElnaraMamedova"
                 width="280px"
               />
@@ -598,7 +598,7 @@
             </li>
             <li class="sns-list__item">
               <a
-                href="https://github.com/dimivaksman"
+                href="https://www.linkedin.com/in/dimitri-vaksman-856487250"
                 lang="en"
                 class="sns-list__link"
                 target="_blank"
@@ -615,7 +615,7 @@
             <div class="team__foto-thumb">
               <img
                 class="team__student-foto"
-                src="./images/Team/BohdanMusiienko.jpg"
+                src="./images/Team/DmytroV.jpg"
                 alt="Dmytro Vaksman"
                 width="280px"
               />
