--- a/src/sass/components/_team-modal.scss
+++ b/src/sass/components/_team-modal.scss
@@ -24,13 +24,14 @@
     width: 30px;
     height: 30px;
     background-color: transparent;
-    border: 2px solid rgba(236, 114, 8, 0.1);
+    border: 2px solid rgba(23, 22, 22, 0.547);
     border-radius: 50%;
-    margin-left: 10px;
+    margin-right: 10px;
     margin-top: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: auto;
     // transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -213,7 +214,7 @@
 .team__foto-thumb {
   margin-bottom: 0;
   width: 150px;
-  height: 150px;
+  height: 180px;
   border-radius: 20%;
   overflow: hidden;
 }
