--- a/src/partials/modalfilm.html
+++ b/src/partials/modalfilm.html
@@ -49,6 +49,8 @@
     <div class="btn-block">
       <button type="button" class="modal-button">ADD TO WATCHED</button>
       <button type="button" class="modal-button">ADD TO QUEUE</button>
+      <button type="button" class="modal-button trailer">trailer</button>
+      <div class="trailer-container"></div>
     </div>
   </div>
 </div>
