js-modal-close and header-icon

--- a/src/partials/header-main.html
+++ b/src/partials/header-main.html
@@ -4,7 +4,7 @@
             <div class="logo-container">
                 <a href="./index.html" class="logo-film">
                     <svg class="logo" width="24" height="24">
-                        <use class="logo-icon" href="#"></use>
+                        <use class="logo-icon" href=".//images/icons.svg#icon-film"></use>
                     </svg>
                     <span class="logo-name">Filmoteka</span>
                 </a>
@@ -27,8 +27,10 @@
                 <button type="submit" class="search-btn">
                     <span class="search-icon"></span>
                 </button>
-                <!-- <span class="input-error">Search result not successful. Enter the correct movie name and</span> -->
+                
             </div>
+            
         </form>
+        <span class="input-error">Search result not successful. Enter the correct movie name and</span>
     </div>
 </header>
