--- a/src/partials/modalfilm.html
+++ b/src/partials/modalfilm.html
@@ -47,8 +47,12 @@
     </p>
     <!-----------------------------------------------------END OF JS MARKUP------------------------------------------------------------------------>
     <div class="btn-block">
-      <button type="button" class="modal-button">ADD TO WATCHED</button>
-      <button type="button" class="modal-button">ADD TO QUEUE</button>
+      <button type="button" class="modal-button js-watchedBtn">
+        ADD TO WATCHED
+      </button>
+      <button type="button" class="modal-button js-queueBtn">
+        ADD TO QUEUE
+      </button>
     </div>
   </div>
 </div>
