--- a/src/sass/components/_header-library.scss
+++ b/src/sass/components/_header-library.scss
@@ -1,144 +1,139 @@
-.library-header{
-    
-    height: 216px;
-    position: relative;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.56);
-    background-image: url(../images/Library/header-lib-mob-1x.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+.library-header {
+  height: 216px;
+  position: relative;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.56);
+  background-image: url(../images/Library/header-lib-mob-1x.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  @include retina {
+    background-image: url(../images/Library/header-lib-mob-2x.jpg);
+  }
+
+  @include tablet {
+    background-image: url(../images/Library/header-lib-tablet-1x.jpg);
 
     @include retina {
-        background-image: url(../images/Library/header-lib-mob-2x.jpg);
+      background-image: url(../images/Library/header-lib-tablet-2x.jpg);
     }
+  }
 
-    @include tablet {
-        background-image: url(../images/Library/header-lib-tablet-1x.jpg);
+  @include desktop {
+    background-image: url(../images/Library/header-lib-desktop-1x.jpg);
 
-        @include retina {
-            background-image: url(../images/Library/header-lib-tablet-2x.jpg);
-        }
+    @include retina {
+      background-image: url(../images/Library/header-lib-desktop-2x.jpg);
     }
-
-    @include desktop {
-        background-image: url(../images/Library/header-lib-desktop-1x.jpg);
-
-        @include retina {
-            background-image: url(../images/Library/header-lib-desktop-2x.jpg);
-        }
-    }
+  }
 }
 
-.library-container{
-    margin: 0 auto;
-    // text-align: center;
-  
-    @include mobile {
-      max-width: 320px;
-      padding-left: 20px;
-      padding-right: 20px;
-    }
-  
-    @include tablet {
-      max-width: 768px;
-      padding-left: 32px;
-      padding-right: 32px;
-    }
-  
-    @include desktop {
-      max-width: 1280px;
-    }
+.library-container {
+  margin: 0 auto;
+  // text-align: center;
 
+  @include mobile {
+    max-width: 320px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  @include tablet {
+    max-width: 768px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+
+  @include desktop {
+    max-width: 1280px;
+  }
 }
-.library__filter{
-text-align: center;
-@media screen and (min-width: 320px) and (max-width: 767px){
+.library__filter {
+  text-align: center;
+  @media screen and (min-width: 320px) and (max-width: 767px) {
     display: flex;
     justify-content: center;
+  }
 }
-}
-                                                //buttons
+//buttons
 
-.filter__button{
+.filter__button {
+  min-width: 148px;
+  padding-left: 42px;
+  padding-right: 42px;
+  padding-top: 14px;
+  padding-bottom: 14px;
+
+  border: 1px solid #ffffff;
+  color: #ffffff;
+  border-radius: 5px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  /* or 133% */
+  background-color: transparent;
+  text-transform: uppercase;
+
+  @include tablet {
     min-width: 148px;
+    padding-left: 46px;
+    padding-right: 46px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+  }
+
+  @include desktop {
+    min-width: 152px;
     padding-left: 42px;
     padding-right: 42px;
     padding-top: 14px;
     padding-bottom: 14px;
-
-    border: 1px solid #FFFFFF;
-    color: #FFFFFF;
-    border-radius: 5px;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 16px;
-/* or 133% */
-    background-color: transparent;
-    text-transform: uppercase;  
-
-    @include tablet {
-        min-width: 148px;
-        padding-left: 46px;
-        padding-right: 46px;
-        padding-top: 13px;
-        padding-bottom: 13px;
-    }
-
-    @include desktop {
-        min-width: 152px;
-        padding-left: 42px;
-        padding-right: 42px;
-        padding-top: 14px;
-        padding-bottom: 14px;
-    }
-    @include mobile {
-        min-width: 129px;
-        padding-left: 36px;
-        padding-right: 36px;
-        padding-top: 14px;
-        padding-bottom: 14px;
-    }
+  }
+  @include mobile {
+    min-width: 129px;
+    padding-left: 36px;
+    padding-right: 36px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+  }
 }
 
-.filter__item:not(:last-child){
-    margin-right: 16px;
+.filter__item:not(:last-child) {
+  margin-right: 16px;
 }
 
-
-.filter__button:hover {
-        background-color: #FF6B01; 
-        color: white;
-        border: 1px solid #FF6B01;
-      }
+.filter__button:hover,
+.active {
+  background-color: #ff6b01;
+  color: white;
+  border: 1px solid #ff6b01;
+}
 .filter__button:focus {
-        background-color: #FF6B01; 
-        color: white;
-        border: 1px solid #FF6B01;
-      }
+  background-color: #ff6b01;
+  color: white;
+  border: 1px solid #ff6b01;
+}
 .filter__button:active {
-        background-color: #FF6B01; 
-        color: white;
-        border: 1px solid #FF6B01;
-      }
-
+  background-color: #ff6b01;
+  color: white;
+  border: 1px solid #ff6b01;
+}
 
 // .logo-name{
 
 // }
 
-.library-logo{
-    fill: currentColor;
-    margin-right: 10px;
-
+.library-logo {
+  fill: currentColor;
+  margin-right: 10px;
 }
-
 
 .library-logo:hover,
 .library-logo:focus,
-.library-logo:active{
-    fill: currentColor;
+.library-logo:active {
+  fill: currentColor;
 }
