--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,6 +13,7 @@
 @import './components/header-library';
 @import './layouts-homepage/gallery';
 @import './components/gallery';
+@import './components/library-list';
 @import './components/footer';
 
 @import './components/modalfilm';
