--- a/src/partials/modalfilm.html
+++ b/src/partials/modalfilm.html
@@ -4,8 +4,9 @@
       <use href="./images/icons.svg#icon-close"></use>
     </svg>
   </button>
-  <!-----------------------------------------------------START OF JS MARKUP------------------------------------------------------------------------>
-  <div class="modal-poster">
+  <div class="card"></div>
+    <!-----------------------------------------------------START OF JS MARKUP------------------------------------------------------------------------>
+    <!-- <div class="modal-poster">
     <img
       class="img-film"
       src="https://images-na.ssl-images-amazon.com/images/I/81qB1pCnBIL._AC_SL1500_.jpg"
@@ -44,11 +45,10 @@
       tensions rise, things go from bad to worse as they realise the bags of
       gold are filled with lead... they’ve been double crossed – but by who and
       how?
-    </p>
+    </p> -->
     <!-----------------------------------------------------END OF JS MARKUP------------------------------------------------------------------------>
     <div class="btn-block">
       <button type="button" class="modal-button">ADD TO WATCHED</button>
       <button type="button" class="modal-button">ADD TO QUEUE</button>
     </div>
-  </div>
 </div>
