--- a/src/sass/components/_modalfilm.scss
+++ b/src/sass/components/_modalfilm.scss
@@ -1,7 +1,7 @@
 .modal {
   padding: 48px 20px 40px 20px;
   position: fixed;
-
+display: block;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
@@ -188,4 +188,9 @@
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   margin: -1px;
+}
+
+
+.is-hidden{
+  display: none;;
 }
