--- a/src/partials/modalfilm.html
+++ b/src/partials/modalfilm.html
@@ -1,4 +1,4 @@
-<div class="modal">
+<div class="modal" data-modal>
   <button type="button" class="modal-close" data-modal-close>
     <svg class="modal-close-icon" width="32" height="32">
       <use href="./images/icons.svg#icon-close"></use>
