--- a/src/partials/modalfilm.html
+++ b/src/partials/modalfilm.html
@@ -1,12 +1,13 @@
-<div class="modal">
-  <button type="button" class="modal-close" data-modal-close>
+<div class="backdrop visually-hidden">
+  <div class="modal">
+    <!-- <button type="button" class="modal-close" data-modal-close>
     <svg class="modal-close-icon" width="32" height="32">
       <use href="./images/icons.svg#icon-close"></use>
     </svg>
-  </button>
-  <!-----------------------------------------------------START OF JS MARKUP------------------------------------------------------------------------>
-  <div class="modal-poster">
-    <img
+  </button> -->
+    <!-----------------------------------------------------START OF JS MARKUP------------------------------------------------------------------------>
+    <!-- <div class="modal-poster"> -->
+    <!-- <img
       class="img-film"
       src="https://images-na.ssl-images-amazon.com/images/I/81qB1pCnBIL._AC_SL1500_.jpg"
       alt=""
@@ -44,11 +45,13 @@
       tensions rise, things go from bad to worse as they realise the bags of
       gold are filled with lead... they’ve been double crossed – but by who and
       how?
-    </p>
+    </p> -->
     <!-----------------------------------------------------END OF JS MARKUP------------------------------------------------------------------------>
-    <div class="btn-block">
+    <!-- <div class="btn-block">
       <button type="button" class="modal-button">ADD TO WATCHED</button>
       <button type="button" class="modal-button">ADD TO QUEUE</button>
     </div>
+  </div> -->
+    <!-- </div> -->
   </div>
 </div>
