--- a/src/sass/components/_modalfilm.scss
+++ b/src/sass/components/_modalfilm.scss
@@ -189,3 +189,13 @@
   clip-path: inset(50%);
   margin: -1px;
 }
+
+.backdrop {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  transition: opacity 250ms var(--transition-timing-function),
+    visibility 250ms var(--transition-timing-function);
+}
