--- a/src/sass/components/_team-modal.scss
+++ b/src/sass/components/_team-modal.scss
@@ -11,7 +11,7 @@
 }
 
 .footer__modal {
-  background-color: #555050;
+  background-color: white;
   margin: 0 auto;
   padding: 1px;
   border: 1px solid rgb(141, 65, 65);
@@ -44,10 +44,6 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team {
-  color: rgb(219, 93, 93);
-}
-
 .team__list {
   width: 100%;
   display: flex;
@@ -63,7 +59,6 @@
   margin-bottom: 20px;
 
   background-color: transparent;
-  box-shadow: inset 2px 2px 5px #f0700e, inset -5px -5px 10px rgb(239, 7, 7);
 }
 //   @include tablet {
 //     width: 100%;
@@ -177,17 +172,17 @@
 //   }
 // }
 
-.team {
-  position: relative;
-  margin-bottom: 20px;
-  text-align: center;
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 2.5rem;
-  letter-spacing: 10px;
-  color: #060607;
-  text-shadow: 1px 4px 6px #e77f09, 1px -2px 2px rgb(223, 5, 5);
-  // animation: text 2500ms linear alternate 2500ms;
-}
+// .team {
+//   position: relative;
+//   margin-bottom: 20px;
+//   text-align: center;
+//   font-family: Helvetica, Arial, sans-serif;
+//   font-size: 2.5rem;
+//   letter-spacing: 10px;
+//   color: #060607;
+//   text-shadow: 1px 4px 6px #e77f09, 1px -2px 2px rgb(223, 5, 5);
+//   // animation: text 2500ms linear alternate 2500ms;
+// }
 
 @keyframes text {
   0% {
@@ -213,9 +208,9 @@
 
 .team__foto-thumb {
   margin-bottom: 0;
-  width: 150px;
-  height: 180px;
-  border-radius: 20%;
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
   overflow: hidden;
 }
 
@@ -234,17 +229,14 @@
 
 .team__student-name {
   margin-bottom: 10px;
-  color: var(--mainAccentColor);
   letter-spacing: 2px;
   font-size: 15px;
-  text-shadow: 0.5px 0.5px 1px rgb(53, 53, 53);
 }
 
 .team__student-role {
   margin-bottom: 10px;
   font-weight: 700;
   font-size: 15px;
-  color: rgb(219, 93, 93);
   /* text-shadow: 0.5px 0.5px 1px rgb(255, 255, 255); */
 }
 
