--- a/src/partials/team-modal.html
+++ b/src/partials/team-modal.html
@@ -35,13 +35,15 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__foto-thumb">
-              <img
-                class="team__student-foto"
-                src="./images/Team/BohdanMusiienko.jpg"
-                alt="BohdanMusiienko"
-                width="280px"
-              />
+            <div class="team__border-outside">
+              <div class="team__foto-thumb">
+                <img
+                  class="team__student-foto"
+                  src="./images/Team/BohdanMusiienko.jpg"
+                  alt="BohdanMusiienko"
+                  width="280px"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -83,13 +85,15 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__foto-thumb">
-              <img
-                class="team__student-foto"
-                src="./images/Team/InhaYurchenko.jpg"
-                alt="InhaYurchenko"
-                width="280px"
-              />
+            <div class="team__border-outside">
+              <div class="team__foto-thumb">
+                <img
+                  class="team__student-foto"
+                  src="./images/Team/InhaYurchenko.jpg"
+                  alt="InhaYurchenko"
+                  width="280px"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -131,13 +135,15 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__foto-thumb">
-              <img
-                class="team__student-foto"
-                src="./images/Team/StepanSkichko.jpg"
-                alt="StepanSkichko"
-                width="280px"
-              />
+            <div class="team__border-outside">
+              <div class="team__foto-thumb">
+                <img
+                  class="team__student-foto"
+                  src="./images/Team/StepanSkichko.jpg"
+                  alt="StepanSkichko"
+                  width="280px"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -179,13 +185,15 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__foto-thumb">
-              <img
-                class="team__student-foto"
-                src="./images/Team/DmytroLitvinenko.jpg"
-                alt="DmytroLitvinenko "
-                width="280px"
-              />
+            <div class="team__border-outside">
+              <div class="team__foto-thumb">
+                <img
+                  class="team__student-foto"
+                  src="./images/Team/DmytroLitvinenko.jpg"
+                  alt="DmytroLitvinenko "
+                  width="280px"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -227,13 +235,15 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__foto-thumb">
-              <img
-                class="team__student-foto"
-                src="./images/Team/AnastasiiaYurchenko.jpg"
-                alt="AnastasiiaYurchenko "
-                width="280px"
-              />
+            <div class="team__border-outside">
+              <div class="team__foto-thumb">
+                <img
+                  class="team__student-foto"
+                  src="./images/Team/AnastasiiaYurchenko.jpg"
+                  alt="AnastasiiaYurchenko "
+                  width="280px"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -275,13 +285,15 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__foto-thumb">
-              <img
-                class="team__student-foto"
-                src="./images/Team/RudSerhii.jpg"
-                alt="SerhiiRud"
-                width="280px"
-              />
+            <div class="team__border-outside">
+              <div class="team__foto-thumb">
+                <img
+                  class="team__student-foto"
+                  src="./images/Team/RudSerhii.jpg"
+                  alt="SerhiiRud"
+                  width="280px"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -323,13 +335,15 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__foto-thumb">
-              <img
-                class="team__student-foto"
-                src="./images/Team/RudNataliia.jpg"
-                alt="NataliiaRud"
-                width="280px"
-              />
+            <div class="team__border-outside">
+              <div class="team__foto-thumb">
+                <img
+                  class="team__student-foto"
+                  src="./images/Team/RudNataliia.jpg"
+                  alt="NataliiaRud"
+                  width="280px"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -357,7 +371,7 @@
             </li>
             <li class="sns-list__item">
               <a
-                href="https://github.com/maridanyliuk"
+                href="https://www.linkedin.com/in/maryna-danyliuk-a370a9271/"
                 lang="en"
                 class="sns-list__link"
                 target="_blank"
@@ -371,13 +385,15 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__foto-thumb">
-              <img
-                class="team__student-foto"
-                src="./images/Team/MarynaDanyliuk.jpg"
-                alt="MarynaDanyliuk"
-                width="280px"
-              />
+            <div class="team__border-outside">
+              <div class="team__foto-thumb">
+                <img
+                  class="team__student-foto"
+                  src="./images/Team/MarynaDanyliuk.jpg"
+                  alt="MarynaDanyliuk"
+                  width="280px"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -419,13 +435,15 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__foto-thumb">
-              <img
-                class="team__student-foto"
-                src="./images/Team/OleksandrSibirtsev.jpg"
-                alt="OleksandrSibirtsev"
-                width="280px"
-              />
+            <div class="team__border-outside">
+              <div class="team__foto-thumb">
+                <img
+                  class="team__student-foto"
+                  src="./images/Team/OleksandrSibirtsev.jpg"
+                  alt="OleksandrSibirtsev"
+                  width="280px"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -467,13 +485,15 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__foto-thumb">
-              <img
-                class="team__student-foto"
-                src="./images/Team/AnatoliiPysarenko.jpg"
-                alt="AnatoliiPysarenko"
-                width="280px"
-              />
+            <div class="team__border-outside">
+              <div class="team__foto-thumb">
+                <img
+                  class="team__student-foto"
+                  src="./images/Team/AnatoliiPysarenko.jpg"
+                  alt="AnatoliiPysarenko"
+                  width="280px"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -515,13 +535,15 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__foto-thumb">
-              <img
-                class="team__student-foto"
-                src="./images/Team/NataliiaTsyren.jpg"
-                alt="NataliiaTsyren"
-                width="280px"
-              />
+            <div class="team__border-outside">
+              <div class="team__foto-thumb">
+                <img
+                  class="team__student-foto"
+                  src="./images/Team/NataliiaTsyren.jpg"
+                  alt="NataliiaTsyren"
+                  width="280px"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -563,13 +585,15 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__foto-thumb">
-              <img
-                class="team__student-foto"
-                src="./images/Team/ElnaraMamedova.jpg"
-                alt="ElnaraMamedova"
-                width="280px"
-              />
+            <div class="team__border-outside">
+              <div class="team__foto-thumb">
+                <img
+                  class="team__student-foto"
+                  src="./images/Team/ElnaraMamedova.jpg"
+                  alt="ElnaraMamedova"
+                  width="280px"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -611,13 +635,15 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__foto-thumb">
-              <img
-                class="team__student-foto"
-                src="./images/Team/DmytroV.jpg"
-                alt="Dmytro Vaksman"
-                width="280px"
-              />
+            <div class="team__border-outside">
+              <div class="team__foto-thumb">
+                <img
+                  class="team__student-foto"
+                  src="./images/Team/DmytroV.jpg"
+                  alt="Dmytro Vaksman"
+                  width="280px"
+                />
+              </div>
             </div>
           </div>
         </div>
