--- a/src/sass/components/_team-modal.scss
+++ b/src/sass/components/_team-modal.scss
@@ -27,12 +27,12 @@
     border: 2px solid rgba(23, 22, 22, 0.547);
     border-radius: 50%;
     margin-right: 10px;
-    margin-top: 10px;
+    margin-top: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-left: auto;
-    // transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close:hover,
@@ -43,6 +43,7 @@
   cursor: pointer;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .team__list {
   width: 100%;
@@ -59,62 +60,8 @@
   margin-bottom: 20px;
 
   background-color: transparent;
+  box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #fff;
 }
-//   @include tablet {
-//     width: 100%;
-//     flex-basis: calc((100% - 1 * 32px) / 2);
-//     margin-right: 32px;
-//     margin-bottom: 32px;
-
-//     &:not(:last-child) {
-//       margin-bottom: 32px;
-//       margin-right: 32px;
-//     }
-
-//     &:nth-child(2n) {
-//       margin-right: 0;
-//     }
-
-//     &:last-child {
-//       margin-right: auto;
-//       margin-bottom: 0px;
-//     }
-
-//     &:nth-last-child(-n + 2) {
-//       margin-bottom: 0;
-//     }
-//   }
-
-//   @include desktop {
-//     flex-basis: calc((100% - 3 * 16px) / 4);
-//     margin-right: 16px;
-//     margin-bottom: 32px;
-
-//     &:nth-child(4n) {
-//       margin-right: 0;
-//     }
-
-//     &:last-child {
-//       margin-right: auto;
-//       margin-bottom: 0px;
-//     }
-
-//     &:nth-last-child(-n + 4) {
-//       margin-bottom: 0;
-//     }
-//   }
-
-//   transition-property: scale;
-//   transition-duration: 500ms;
-//   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-//   &:hover,
-//   &:active,
-//   &:focus {
-//     scale: 1.03;
-//     box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
-//   }
-// }
 
 .team__wrapper {
   display: flex;
@@ -148,41 +95,8 @@
   height: 24px;
   border-radius: 20px;
   background-color: transparent;
+  box-shadow: -2px -2px 5px white, 3px 3px 5px rgba(0, 0, 0, 0.1);
 }
-
-//   &:hover {
-//     box-shadow: inset -1px -1px 3px white, inset 1px 1px 3px rgba(0, 0, 0, 0.1);
-//   }
-
-//   &:hover > .sns-list__icon {
-//     fill: var(--mainAccentColor);
-//     transform: scale(0.8);
-//   }
-
-//   &:active > .sns-list__icon {
-//     fill: var(--mainAccentColor);
-//   }
-
-//   &:active {
-//     box-shadow: inset -1px -1px 3px white, inset 1px 1px 3px rgba(0, 0, 0, 0.1);
-//   }
-
-//   &:hover > .sns-list__icon {
-//     fill: var(--mainAccentColor);
-//   }
-// }
-
-// .team {
-//   position: relative;
-//   margin-bottom: 20px;
-//   text-align: center;
-//   font-family: Helvetica, Arial, sans-serif;
-//   font-size: 2.5rem;
-//   letter-spacing: 10px;
-//   color: #060607;
-//   text-shadow: 1px 4px 6px #e77f09, 1px -2px 2px rgb(223, 5, 5);
-//   // animation: text 2500ms linear alternate 2500ms;
-// }
 
 @keyframes text {
   0% {
@@ -206,11 +120,27 @@
   padding: 20px;
 }
 
+.team__border-outside {
+  padding: 5px;
+  margin: 0 auto;
+  width: 150px;
+  border-radius: 10%;
+  border: none;
+  margin-bottom: 10px;
+  box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #fff;
+
+  &:hover,
+  &:focus {
+    box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
+  }
+
+}
+
 .team__foto-thumb {
   margin-bottom: 0;
-  width: 200px;
-  height: 200px;
-  border-radius: 100%;
+  width: 140px;
+  height: 170px;
+  border-radius: 10%;
   overflow: hidden;
 }
 
@@ -223,7 +153,7 @@
 }
 
 .team__student-card {
-  padding: 20px;
+padding: 10px;
   font-size: 14px;
 }
 
@@ -237,7 +167,7 @@
   margin-bottom: 10px;
   font-weight: 700;
   font-size: 15px;
-  /* text-shadow: 0.5px 0.5px 1px rgb(255, 255, 255); */
+  text-shadow: 0.5px 0.5px 1px rgb(255, 255, 255);
 }
 
 .noScroll {
