--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,13 +1,9 @@
-<footer>
-  <div class="foter__list">
-    <p class="foter__list-item">
-      © 2023 | All Rights Reserved | Developed with
-    </p>
-    <svg class="footer__list-icon">
-      <use href="./images/icons.svg#icon-heart-favorite"></use>
-    </svg>
-    <button type="button" class="footer__btn" id="open-modal-btn">
-      by GoIT Students
-    </button>
-  </div>
+<footer class="foter__list">
+  <p class="foter__list-item">© 2023 | All Rights Reserved | Developed with</p>
+  <svg class="footer__list-icon">
+    <use href="./images/icons.svg#icon-heart-favorite"></use>
+  </svg>
+  <button type="button" class="footer__btn" id="open-modal-btn">
+    by GoIT Students
+  </button>
 </footer>
