--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,49 +1,44 @@
-footer {
-  position: relative;
-  bottom: 0px;
-  background-color: #f7f7f7;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
+.footer {
   width: 100%;
-}
+  height: 100px;
+  margin-top: auto;
+  padding-top: 28px;
+  padding-bottom: 29px;
+  text-align: center;
+  background-color: #f7f7f7;
 
-.foter__list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  @include tablet {
-    flex-direction: row;
+  @media screen and (min-width: 768px) {
+    height: 79px;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 }
 
-.foter__list-item,
-.footer__btn {
-  font-weight: 400;
+.footer__container {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.footer__text {
+font-weight: 400;
   font-size: 14px;
   line-height: 1.14;
   color: #545454;
 
-  @include tablet {
-    font-size: 16px;
-    line-height: 1.19;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
-.foter__list-item:not(:last-child) {
-  margin-right: 5px;
-}
-
-.footer__list-icon {
-  width: 14px;
-  height: 13px;
-  margin-right: 5px;
-  margin-top: 3px;
-  animation: logoPulse 2500ms linear 500ms infinite;
+.footer__icon {
+  margin-left: 10px;
+  margin-right: 10px;
+  display: block;
 }
 
 @keyframes logoPulse {
@@ -60,15 +55,9 @@ footer {
   }
 }
 
-.footer__list-icon {
-  animation: logoPulse 1500ms linear 500ms infinite;
-}
-
 .footer__btn {
   background-color: transparent;
   text-decoration: underline #545454;
-  transition: var(--transition-duration);
-  transition-timing-function: var(--timing-function);
 }
 
 .footer__btn:hover {
