--- a/src/sass/components/_header-library.scss
+++ b/src/sass/components/_header-library.scss
@@ -8,6 +8,8 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  padding-top: 40px;
+    padding-bottom: 44px;
 
   @include retina {
     background-image: url(../images/Library/header-lib-mob-2x.jpg);
