--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -1,4 +1,9 @@
 body {
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   background-color: #ffffff;
+  position: relative;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
