--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,4 +1,10 @@
+// body {
+//   position: relative;
+//   padding-bottom: 60px;
+// }
+
 .footer {
+  position: absolute;
   width: 100%;
   height: 100px;
   margin-top: auto;
